--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     box-sizing: border-box;
     
   }
-  header, section, footer {
+  header, section, footer, form {
     margin: 40px 0;
   }
   /* Header */
@@ -100,6 +100,132 @@
   .contacts img {
     max-width: 100%;
     max-height: 100%;
+  }
+  .form-group {
+    position: relative;
+    margin-bottom: 1.25rem;
+  }
+  
+  .label-control {
+    border-radius: 5px;
+    position: absolute;
+    top: 0.875rem;
+    left: 1.5rem;
+    color: #FF6033;
+    opacity: 1;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    cursor: text;
+    transition: all 0.2s ease;
+  }
+  
+  .form-control-input:focus + .label-control,
+  .form-control-input.notEmpty + .label-control,
+  .form-control-textarea:focus + .label-control,
+  .form-control-textarea.notEmpty + .label-control {
+    top: 0.125rem;
+    color: #4d5055;
+    opacity: 1;
+    font-size: 0.75rem;
+    font-weight: 700;
+  }
+  
+  .form-control-input,
+  .form-control-select {
+    border-radius: 5px;
+    display: block; /* needed for proper display of the label in Firefox, IE, Edge */
+    width: 100%;
+    padding-top: 1.125rem;
+    padding-bottom: 0.125rem;
+    padding-left: 1.5rem;
+    border: 1px solid #cbcbd1;
+    background-color: #ffffff;
+    color: #4d5055;
+    font-size: 0.875rem;
+    line-height: 1.875rem;
+    transition: all 0.2s;
+    -webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
+  }
+  
+  .form-control-select {
+    border-radius: 5px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    height: 3.25rem;
+    color: #7d838a;
+  }
+  
+  select {
+      /* you should keep these first rules in place to maintain cross-browser behavior */
+      -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+      -o-appearance: none;
+      appearance: none;
+      background-image: url('../images/down-arrow.png');
+      background-position: 96% 50%;
+      background-repeat: no-repeat;
+      outline: none;
+  }
+  
+  .form-control-textarea {
+    border-radius: 5px;
+    display: block; /* used to eliminate a bottom gap difference between Chrome and IE/FF */
+    width: 100%;
+    height: 14rem; /* used instead of html rows to normalize height between Chrome and IE/FF */
+    padding-top: 1.5rem;
+    padding-left: 1.3125rem;
+    border: 1px solid #cbcbd1;
+    background-color: #ffffff;
+    color: #4d5055;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    transition: all 0.2s;
+  }
+  
+  .form-control-input:focus,
+  .form-control-select:focus,
+  .form-control-textarea:focus {
+    border: 1px solid #a1a1a1;
+    outline: none; /* Removes blue border on focus */
+  }
+  
+  .form-control-input:hover,
+  .form-control-select:hover,
+  .form-control-textarea:hover {
+    border: 1px solid #0F0A0A;
+  }
+  
+  .checkbox {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
+  
+  input[type='checkbox'] {
+    vertical-align: -10%;
+    margin-right: 0.5rem;
+  }
+  
+  .form-control-submit-button {
+    display: inline-block;
+    height: 3.25rem;
+    padding: 1.625rem 2.625rem 1.625rem 2.625rem;	
+    border: 1px solid #c93d17;
+    border-radius: 10px;
+    border: 1px solid #c93d17;
+    background-color: #c93d17;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 0.875rem;
+    line-height: 0;
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+  
+  .form-control-submit-button:hover {
+    border: 1px solid #FF6033;
+    background-color: transparent;
+    color: #e1e7f5;
   }
   
   /* Widgets */
@@ -227,3 +353,21 @@ footer {
       --svg-width: 640px
     }
   }   
+
+/*******************/
+/*     Contact     */
+/*******************/
+.form-1 {
+	padding-top: 7.75rem;
+	padding-bottom: 7rem;
+	text-align: center;
+}
+
+.form-1 .h2-heading {
+	margin-bottom: 0.75rem;
+	text-align: center;
+}
+
+.form-1 .p-heading {
+	margin-bottom: 4rem;
+}
